--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-media-library": "~15.2.3",
     "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.22.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-gesture-handler": "~2.9.0",
